[gd_scene load_steps=9 format=3 uid="uid://wd748u1vdybq"]

[ext_resource type="Script" uid="uid://bjpgtct41bl2i" path="res://addons/popochiu/editor/canvas_editor_menu/popochiu_canvas_editor_menu.gd" id="1_vs7c6"]
[ext_resource type="Texture2D" uid="uid://b3sku5v1n23ni" path="res://addons/popochiu/icons/btn_baseline.svg" id="2_w3cau"]
[ext_resource type="Texture2D" uid="uid://dmt2epjmlpv56" path="res://addons/popochiu/icons/btn_walk_to_point.svg" id="3_ifql1"]
[ext_resource type="Texture2D" uid="uid://skjlvpct7ah7" path="res://addons/popochiu/icons/btn_look_at_point.svg" id="4_bge33"]
[ext_resource type="Texture2D" uid="uid://cekffh7bsuanp" path="res://addons/popochiu/icons/btn_dialog_position.svg" id="5_803mj"]
[ext_resource type="Texture2D" uid="uid://cyun4rylrtrvm" path="res://addons/popochiu/icons/btn_interaction_polygon.svg" id="6_6oxl8"]
[ext_resource type="Texture2D" uid="uid://d11mg7ftbxvl0" path="res://addons/popochiu/icons/btn_markers.svg" id="6_yea6f"]
[ext_resource type="Texture2D" uid="uid://dfstqtc5nlapr" path="res://addons/popochiu/icons/btn_obstacle_polygon.svg" id="8_8v2pw"]

[node name="PopochiuCanvasEditorMenu" type="HBoxContainer"]
visible = false
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vs7c6")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Popochiu "
vertical_alignment = 1

[node name="BtnMarkers" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Room Markers"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("6_yea6f")

[node name="BtnBaseline" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Baseline"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("2_w3cau")

[node name="BtnWalkToPoint" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Walk-To Point"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("3_ifql1")

[node name="BtnLookAtPoint" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Look-At Point"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("4_bge33")

[node name="BtnDialogPos" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Dialog Position"
theme_type_variation = &"FlatButton"
toggle_mode = true
button_pressed = true
icon = ExtResource("5_803mj")

[node name="BtnInteractionPolygon" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Interaction Polygon"
theme_type_variation = &"FlatButton"
toggle_mode = true
icon = ExtResource("6_6oxl8")

[node name="BtnObstaclePolygon" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Obstacle Polygon"
theme_type_variation = &"FlatButton"
toggle_mode = true
icon = ExtResource("8_8v2pw")
